# Base32

./: Base32.cpp  Base32.h  CMakeLists.txt  README.md  main.cpp
